@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-13T08:18:42Z",
-  "count_outdated" : 327,
-  "uniques_outdated" : 184,
-  "count" : 355,
+  "timestamp" : "2022-06-13T16:20:45Z",
+  "count_outdated" : 329,
+  "uniques_outdated" : 185,
+  "count" : 356,
   "uniques" : 204,
   "clones" : [
-    {
-      "timestamp": "2022-05-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 4,
