@@ -1,3 +1,10 @@
+2022-06-13T16:20:45Z:
+* notice: last 14d: unq all: 6 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 327 / 204 355
+* notice: next accum: outdated-unq outdated-all / unq all: 185 329 / 204 356
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-05-30] / []
+
 2022-06-13T08:18:42Z:
 * notice: last 14d: unq all: 6 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 184 327 / 203 355
